# Narmatha-_69FE52275DAA1BA91964BF1A74413F74

./: .gitignore  README.md  pyproject.toml  requirements.txt  tests_smoke.py
app/: __init__.py  routes.py
app/services/: action_planner.py  text_emotion.py
src/emotion_to_action/: __init__.py  actions.py  assistant.py  cli.py  emotion.py  server.py
tests/: test_actions.py  test_assistant.py  test_emotion.py
